// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Plots-TinyLineChart TinyLineChart-guidLine-start 1`] = `
Object {
  "animation": true,
  "annotations": Array [
    Object {
      "end": Array [
        "max",
        5,
      ],
      "lineStyle": Object {
        "stroke": "red",
      },
      "start": Array [
        "min",
        5,
      ],
      "style": Object {
        "stroke": "red",
      },
      "text": Object {
        "content": "值:5",
        "position": "start",
        "style": Object {
          "lineWidth": 2,
        },
      },
      "type": "line",
    },
  ],
  "appendPadding": Array [
    10,
    5,
    10,
    10,
  ],
  "autoFit": true,
  "color": "pink",
  "data": Array [
    3,
    4,
    3.5,
    5,
    4.9,
    6,
    7,
    9,
    13,
  ],
  "guideLine": Array [
    Object {
      "end": Array [
        "max",
        5,
      ],
      "lineStyle": Object {
        "stroke": "red",
      },
      "start": Array [
        "min",
        5,
      ],
      "text": Object {
        "content": "值:5",
        "position": "start",
        "style": Object {
          "lineWidth": 2,
        },
      },
    },
  ],
  "height": 400,
  "lineStyle": Object {
    "stroke": "red",
  },
  "point": false,
  "smooth": true,
  "tooltip": false,
  "width": 400,
  "xField": "year",
  "yField": "value",
}
`;

exports[`Plots-TinyLineChart TinyLineChart-guidLine-type 1`] = `
Object {
  "animation": true,
  "annotations": Array [
    Object {
      "end": Array [
        "max",
        6.155555555555555,
      ],
      "lineStyle": Object {
        "stroke": "red",
      },
      "start": Array [
        "min",
        6.155555555555555,
      ],
      "style": Object {
        "stroke": "red",
      },
      "text": Object {
        "content": "平均值",
        "position": "start",
        "style": Object {
          "lineWidth": 2,
        },
      },
      "type": "line",
    },
  ],
  "appendPadding": Array [
    10,
    5,
    10,
    10,
  ],
  "autoFit": true,
  "color": "pink",
  "data": Array [
    3,
    4,
    3.5,
    5,
    4.9,
    6,
    7,
    9,
    13,
  ],
  "guideLine": Array [
    Object {
      "lineStyle": Object {
        "stroke": "red",
      },
      "text": Object {
        "content": "平均值",
        "position": "start",
        "style": Object {
          "lineWidth": 2,
        },
      },
      "type": "mean",
    },
  ],
  "height": 400,
  "lineStyle": Object {
    "stroke": "red",
  },
  "point": false,
  "smooth": true,
  "tooltip": false,
  "width": 400,
  "xField": "year",
  "yField": "value",
}
`;

exports[`Plots-TinyLineChart 基础TinyLineChart 1`] = `
Object {
  "animation": true,
  "appendPadding": Array [
    10,
    5,
    10,
    10,
  ],
  "autoFit": true,
  "data": Array [
    3,
    4,
    3.5,
    5,
    4.9,
    6,
    7,
    9,
    13,
  ],
  "height": 400,
  "lineStyle": Object {
    "lineWidth": 10,
  },
  "size": 10,
  "tooltip": false,
  "width": 400,
  "xField": "year",
  "yField": "value",
}
`;
